User differentiation, edit button, message overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,7 @@
     flex-grow: 1;
     overflow: auto;
 }
+
+.Line {
+    word-break: break-word;
+}
